# calcite

./: .claudeignore  .gitattributes  .gitignore  .ratignore  ARCHITECTURE_SUMMARY.txt  CHANGELOG.md  CLAUDE-ADAPTERS.md  CLAUDE-ADAPTERS.ref  CLAUDE-CORE.md  CLAUDE-TEAMS.ref  CLAUDE-TESTING.md  CLAUDE-TROUBLESHOOTING.md  CLAUDE-TROUBLESHOOTING.ref  CLAUDE.md  COMPILATION_FIX_SUMMARY.md  COMPREHENSIVE_IP_DOCUMENTATION.md  CYBER_SCHEMA_PLAN.md  DOWNLOAD_PATTERNS_COMPARISON.md  DebugPatternTest.java  FINDINGS_SUMMARY.md  FRED_ARCHITECTURE_DIAGRAM.md  FRED_DETAILED_ANALYSIS.md  GOVDATA_ANALYSIS_INDEX.md  GOVDATA_ETL_ARCHITECTURE.md  LICENSE-BSL.txt  METADATA_DRIVEN_ANALYSIS.md  MINIO-SETUP.md  README.md  ai.txt  build.gradle.kts  cleanup-dotunderscore.sh  cleanup-macos-metadata.java  djia-production-README.md  djia-production-env.sample.sh  djia-production-env.sh  djia-production-model.json  djia-production-run.sh  djia-production-verification.sql  docker-compose-minio.yml  docker-compose-tracker-pg.yml  (+32 more)
pgwire-calcite/: .gitattributes  .gitignore  NOTICE  README.md  pyproject.toml
pgwire-calcite/packaging/: README.md  build-launcher.sh  build-udf.sh  build-wheelhouse.sh  pack.sh
pgwire-calcite/packaging/homebrew/: pgwire-calcite.rb
pgwire-calcite/packaging/scoop/: pgwire-calcite.json
pgwire-calcite/scripts/: print-calcite-classpath.gradle
pgwire-calcite/src/pgwire_calcite/: airgap.py  arrow_bridge.py  auth.py  authz.py  backend.py  binary_copy.py  calcite_backend.py  calcite_child.py  catalog.py  catalog_populate.py  classpath.py  corpus_gate.py  dialect.py  scram.py  (+9 more)
(+3610 files in other folders)
